@@ -10,6 +10,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 import org.jboss.logging.Logger;
@@ -23,6 +24,7 @@ import io.quarkiverse.operatorsdk.common.ConfigurationUtils;
 import io.quarkiverse.operatorsdk.common.DeserializedKubernetesResourcesBuildItem;
 import io.quarkiverse.operatorsdk.common.FileUtils;
 import io.quarkiverse.operatorsdk.deployment.AddClusterRolesDecorator;
+import io.quarkiverse.operatorsdk.deployment.AddRoleBindingsDecorator;
 import io.quarkiverse.operatorsdk.deployment.ControllerConfigurationsBuildItem;
 import io.quarkiverse.operatorsdk.deployment.GeneratedCRDInfoBuildItem;
 import io.quarkiverse.operatorsdk.deployment.helm.model.Chart;
@@ -36,6 +38,7 @@ import io.quarkus.kubernetes.deployment.KubernetesConfig;
 import io.quarkus.kubernetes.deployment.ResourceNameUtil;
 import io.quarkus.qute.Qute;
 
+// Note that steps of this processor won't be run in dev mode because ArtifactResultBuildItems are only considered in NORMAL mode
 @BuildSteps(onlyIf = HelmGenerationEnabled.class)
 public class HelmChartProcessor {
 
@@ -57,12 +60,8 @@ public class HelmChartProcessor {
     public static final String VALUES_YAML_FILENAME = "values.yaml";
     public static final String CRD_DIR = "crds";
     public static final String CRD_ROLE_BINDING_TEMPLATE_PATH = "/helm/crd-role-binding-template.yaml";
-
-    @BuildStep(onlyIfNot = HelmGenerationEnabled.class)
-    @Produce(ArtifactResultBuildItem.class)
-    void outputHelmGenerationDisabled() {
-        log.debug("Generating Helm chart is disabled");
-    }
+    public static final String CRD_ADDITIONAL_ROLE_BINDING_TEMPLATE_PATH = "/helm/additional-crd-role-binding-template.yaml";
+    public static final String ADDITIONAL_CRD_ROLE_BINDING_YAML = "additional-crd-role-binding.yaml";
 
     @BuildStep
     HelmTargetDirectoryBuildItem createRelatedDirectories(OutputTargetBuildItem outputTarget) {
@@ -79,30 +78,62 @@ public class HelmChartProcessor {
     void addPrimaryClusterRoleBindings(HelmTargetDirectoryBuildItem helmTargetDirectoryBuildItem,
             ControllerConfigurationsBuildItem controllerConfigurations) {
         final var controllerConfigs = controllerConfigurations.getControllerConfigs().values();
-
-        final String template;
-        try (InputStream file = Thread.currentThread().getContextClassLoader()
-                .getResourceAsStream(CRD_ROLE_BINDING_TEMPLATE_PATH)) {
-            if (file == null) {
-                throw new IllegalArgumentException("Template file " + CRD_ROLE_BINDING_TEMPLATE_PATH + " doesn't exist");
-            }
-            template = new String(file.readAllBytes(), StandardCharsets.UTF_8);
-        } catch (IOException e) {
-            throw new IllegalStateException(e);
-        }
-
-        final var templatesDir = helmTargetDirectoryBuildItem.getPathToTemplatesDir();
-
-        controllerConfigs.forEach(cc -> {
-            try {
-                final var name = cc.getName();
-                String res = Qute.fmt(template, Map.of("reconciler-name", name));
-                Files.writeString(templatesDir.resolve(name + "-crd-role-binding.yaml"), res);
-
+        if (!controllerConfigs.isEmpty()) {
+            final String template;
+            try (InputStream file = Thread.currentThread().getContextClassLoader()
+                    .getResourceAsStream(CRD_ROLE_BINDING_TEMPLATE_PATH)) {
+                if (file == null) {
+                    throw new IllegalArgumentException("Template file " + CRD_ROLE_BINDING_TEMPLATE_PATH + " doesn't exist");
+                }
+                template = new String(file.readAllBytes(), StandardCharsets.UTF_8);
             } catch (IOException e) {
                 throw new IllegalStateException(e);
             }
-        });
+
+            final var templatesDir = helmTargetDirectoryBuildItem.getPathToTemplatesDir();
+
+            controllerConfigs.forEach(cc -> {
+                try {
+                    final var name = cc.getName();
+                    String res = Qute.fmt(template, Map.of("reconciler-name", name));
+                    Files.writeString(templatesDir.resolve(name + "-crd-role-binding.yaml"), res);
+
+                } catch (IOException e) {
+                    throw new IllegalStateException(e);
+                }
+            });
+        }
+    }
+
+    @BuildStep
+    @Produce(ArtifactResultBuildItem.class)
+    void addSecondaryClusterRoleBindings(HelmTargetDirectoryBuildItem helmTargetDirectoryBuildItem,
+            ControllerConfigurationsBuildItem controllerConfigurations) {
+        final var controllerConfigs = controllerConfigurations.getControllerConfigs().values();
+        if (!controllerConfigs.isEmpty()) {
+            try (InputStream file = Thread.currentThread().getContextClassLoader()
+                    .getResourceAsStream(CRD_ADDITIONAL_ROLE_BINDING_TEMPLATE_PATH)) {
+                if (file == null) {
+                    throw new IllegalArgumentException(
+                            "Template file " + CRD_ADDITIONAL_ROLE_BINDING_TEMPLATE_PATH + " doesn't exist");
+                }
+
+                final String template = new String(file.readAllBytes(), StandardCharsets.UTF_8);
+                final var templatesDir = helmTargetDirectoryBuildItem.getPathToTemplatesDir();
+                final var stringBuilder = new StringBuilder();
+                controllerConfigs.forEach(cc -> cc.getAdditionalRBACRoleRefs().forEach(roleRef -> {
+                    final String bindingName = AddRoleBindingsDecorator.getSpecificRoleBindingName(cc.getName(), roleRef);
+                    stringBuilder.append(Qute.fmt(template, Map.of(
+                            "role-binding-name", bindingName,
+                            "role-ref-kind", roleRef.getKind(),
+                            "role-ref-api-group", roleRef.getApiGroup(),
+                            "role-ref-name", roleRef.getName())));
+                }));
+                Files.writeString(templatesDir.resolve(ADDITIONAL_CRD_ROLE_BINDING_YAML), stringBuilder.toString());
+            } catch (Exception e) {
+                throw new IllegalStateException(e);
+            }
+        }
     }
 
     @BuildStep
@@ -126,21 +157,24 @@ public class HelmChartProcessor {
 
     @BuildStep
     @Produce(ArtifactResultBuildItem.class)
-    void addExplicitlyAddedKubernetesResources(DeserializedKubernetesResourcesBuildItem generatedKubernetesResources,
+    void addExplicitlyAddedKubernetesResources(
+            @SuppressWarnings("OptionalUsedAsFieldOrParameterType") Optional<DeserializedKubernetesResourcesBuildItem> maybedGeneratedKubeRes,
             HelmTargetDirectoryBuildItem helmDirBI,
             ApplicationInfoBuildItem appInfo, KubernetesConfig kubernetesConfig) {
-        var resources = generatedKubernetesResources.getResources();
-        resources = filterOutStandardResources(resources, ResourceNameUtil.getResourceName(kubernetesConfig, appInfo));
-        if (!resources.isEmpty()) {
-            final var kubernetesManifest = helmDirBI.getPathToTemplatesDir().resolve("kubernetes.yml");
-            // Generate a possibly multi-document YAML
-            String yaml = resources.stream().map(FileUtils::asYaml).collect(Collectors.joining());
-            try {
-                Files.writeString(kubernetesManifest, yaml);
-            } catch (IOException e) {
-                throw new IllegalStateException(e);
+        maybedGeneratedKubeRes.ifPresent(generatedKubernetesResources -> {
+            var resources = generatedKubernetesResources.getResources();
+            resources = filterOutStandardResources(resources, ResourceNameUtil.getResourceName(kubernetesConfig, appInfo));
+            if (!resources.isEmpty()) {
+                final var kubernetesManifest = helmDirBI.getPathToTemplatesDir().resolve("kubernetes.yml");
+                // Generate a possibly multi-document YAML
+                String yaml = resources.stream().map(FileUtils::asYaml).collect(Collectors.joining());
+                try {
+                    Files.writeString(kubernetesManifest, yaml);
+                } catch (IOException e) {
+                    throw new IllegalStateException(e);
+                }
             }
-        }
+        });
     }
 
     private List<HasMetadata> filterOutStandardResources(List<HasMetadata> resources, String operatorName) {
@@ -160,7 +194,7 @@ public class HelmChartProcessor {
                 return !r.getMetadata().getName().equals(operatorName);
             }
             return true;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     @BuildStep
@@ -172,26 +206,33 @@ public class HelmChartProcessor {
     @BuildStep
     @Produce(ArtifactResultBuildItem.class)
     void addGeneratedDeployment(HelmTargetDirectoryBuildItem helmDirBI,
-            DeserializedKubernetesResourcesBuildItem deserializedKubernetesResources,
+            @SuppressWarnings("OptionalUsedAsFieldOrParameterType") Optional<DeserializedKubernetesResourcesBuildItem> maybeDeserializedKubeResources,
             ControllerConfigurationsBuildItem controllerConfigurations,
             ApplicationInfoBuildItem appInfo) {
-        // add an env var for each reconciler's watch namespace in the operator's deployment
-        final var deployment = (Deployment) deserializedKubernetesResources.getResources().stream()
-                .filter(Deployment.class::isInstance).findFirst()
-                .orElseThrow();
-        final var envs = deployment.getSpec().getTemplate().getSpec().getContainers().get(0).getEnv();
-        controllerConfigurations.getControllerConfigs()
-                .forEach((name, unused) -> envs.add(new EnvVar(ConfigurationUtils.getNamespacesPropertyName(name, true),
-                        "{watchNamespaces}", null)));
+        if (maybeDeserializedKubeResources.isEmpty()) {
+            log.warn("No Kubernetes manifests were found, no Helm chart will be generated");
+        } else {
+            // add an env var for each reconciler's watch namespace in the operator's deployment
+            var deployment = (Deployment) maybeDeserializedKubeResources.get().getResources().stream()
+                    .filter(Deployment.class::isInstance).findFirst()
+                    .orElseThrow();
+            // copy the deployment so that changes are not propagated outside of this method
+            final var firstContainer = deployment.edit().editSpec().editTemplate().editSpec().editFirstContainer();
+            controllerConfigurations.getControllerConfigs()
+                    .forEach((name, unused) -> firstContainer.addNewEnv()
+                            .withName(ConfigurationUtils.getNamespacesPropertyName(name, true))
+                            .withValue("{watchNamespaces}").endEnv());
+            deployment = firstContainer.endContainer().endSpec().endTemplate().endSpec().build();
 
-        // a bit hacky solution to get the exact placeholder without brackets
-        final var template = FileUtils.asYaml(deployment);
-        var res = template.replace("\"{watchNamespaces}\"", "{{ .Values.watchNamespaces }}");
-        res = res.replaceAll(appInfo.getVersion(), "{{ .Chart.AppVersion }}");
-        try {
-            Files.writeString(helmDirBI.getPathToTemplatesDir().resolve("deployment.yaml"), res);
-        } catch (IOException e) {
-            throw new IllegalStateException(e);
+            // a bit hacky solution to get the exact placeholder without brackets
+            final var template = FileUtils.asYaml(deployment);
+            var res = template.replace("\"{watchNamespaces}\"", "{{ .Values.watchNamespaces }}");
+            res = res.replaceAll(appInfo.getVersion(), "{{ .Chart.AppVersion }}");
+            try {
+                Files.writeString(helmDirBI.getPathToTemplatesDir().resolve("deployment.yaml"), res);
+            } catch (IOException e) {
+                throw new IllegalStateException(e);
+            }
         }
     }
 
@@ -200,7 +241,7 @@ public class HelmChartProcessor {
     private void addCRDs(HelmTargetDirectoryBuildItem helmDirBI, GeneratedCRDInfoBuildItem generatedCRDInfoBuildItem) {
         var crdInfos = generatedCRDInfoBuildItem.getCRDGenerationInfo().getCrds().values().stream()
                 .flatMap(m -> m.values().stream())
-                .collect(Collectors.toList());
+                .toList();
 
         final var crdDir = helmDirBI.getPathToHelmDir().resolve(CRD_DIR);
         crdInfos.forEach(crdInfo -> {
